--- a/Plot_fish_and_spots.ipynb
+++ b/Plot_fish_and_spots.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "5f0553fe",
    "metadata": {
     "scrolled": false
@@ -20,12 +20,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: tifffile in /home/tom/anaconda3/envs/bigfish38_samm/lib/python3.8/site-packages (2021.10.12)\n",
-      "Requirement already satisfied: numpy>=1.15.1 in /home/tom/anaconda3/envs/bigfish38_samm/lib/python3.8/site-packages (from tifffile) (1.22.4)\n",
+      "Requirement already satisfied: tifffile in /home/tom/anaconda3/lib/python3.8/site-packages (2022.3.25)\n",
+      "Requirement already satisfied: numpy>=1.19.2 in /home/tom/anaconda3/lib/python3.8/site-packages (from tifffile) (1.20.3)\n",
+      "\u001b[33mWARNING: Error parsing requirements for googledrivedownloader: [Errno 2] No such file or directory: '/home/tom/anaconda3/lib/python3.8/site-packages/googledrivedownloader-0.4.dist-info/METADATA'\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.3; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/home/tom/anaconda3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
       "Collecting pathlib\n",
-      "  Downloading pathlib-1.0.1-py3-none-any.whl (14 kB)\n",
+      "  Using cached pathlib-1.0.1-py3-none-any.whl (14 kB)\n",
+      "\u001b[33mWARNING: Error parsing requirements for googledrivedownloader: [Errno 2] No such file or directory: '/home/tom/anaconda3/lib/python3.8/site-packages/googledrivedownloader-0.4.dist-info/METADATA'\u001b[0m\n",
       "Installing collected packages: pathlib\n",
-      "Successfully installed pathlib-1.0.1\n"
+      "Successfully installed pathlib-1.0.1\n",
+      "\u001b[33mWARNING: You are using pip version 21.3; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/home/tom/anaconda3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -38,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "3e85cf46",
    "metadata": {},
    "outputs": [],
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "afdd62e7",
    "metadata": {},
    "outputs": [
@@ -59,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r1_pos13_ch0.tif\n",
+      "r1_pos1_ch0.tif\n",
       "r1_Cy3\n"
      ]
     }
@@ -67,9 +73,9 @@
    "source": [
     "# MODIFY PATH HERE TO THE IMAGE YOU WANT TO SEE \n",
     "####################\n",
-    "path_to_spots_dico = \"/media/tom/Transcend/lustr2023/images/23mai_dico_spots_local_detection0.npy\"\n",
+    "path_to_spots_dico = \"/media/tom/Transcend/lustr2023/images/23mai_dico_dico_commu_local_detect_cy5_removal.npy\"\n",
     "\n",
-    "path_to_image = \"/media/tom/Transcend/lustr2023/images/r1_Cy3/r1_pos13_ch0.tif\"\n",
+    "path_to_image = \"/media/tom/Transcend/lustr2023/images/r1_Cy3/r1_pos1_ch0.tif\"\n",
     "###################\n",
     "\n",
     "\n",
@@ -87,19 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "6b63c73f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Points layer 'spots' at 0x7fdcd6796850>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'r1_Cy5'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-93c2ef125ae0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mspots_array\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mspots_dico\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimage_round\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimage_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mviewer\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mnapari\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mViewer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'r1_Cy5'"
+     ]
     }
    ],
    "source": [
@@ -126,11 +133,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a2fc6931",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'R9 Fibin' at 0x7f83692b5df0>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "path_to_image = \"/media/tom/Transcend/lustr2023/images/r1_Cy3/r1_pos1_ch0.tif\"\n",
+    "###################\n",
+    "\n",
+    "\n",
+    "\n",
+    "image = tifffile.imread(path_to_image)\n",
+    "viewer.add_image(image, name='R1 Rtkn2')\n",
+    "#viewer.add_image(img_dapi, name='rna')\n",
+    "\n",
+    "\n",
+    "\n",
+    "path_to_image = \"/media/tom/Transcend/lustr2023/images/r2/r2_pos1_ch0.tif\"\n",
+    "###################\n",
+    "\n",
+    "\n",
+    "\n",
+    "image = tifffile.imread(path_to_image)\n",
+    "viewer.add_image(image, name='R2 lamp3')\n",
+    "\n",
+    "\n",
+    "\n",
+    "path_to_image = \"/media/tom/Transcend/lustr2023/images/r9/r9_pos1_ch0.tif\"\n",
+    "###################\n",
+    "\n",
+    "\n",
+    "\n",
+    "image = tifffile.imread(path_to_image)\n",
+    "viewer.add_image(image, name='R9 Fibin')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -146,7 +194,23 @@
    "id": "f393a17b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "dico_bc_gene1 = {\n",
+    "    'r1_Cy3': \"Rtkn2\",\n",
+    "    'r2': \"Lamp3\",\n",
+    "    'r3': \"Ptprb\",\n",
+    "    'r4': \"Pecam1\",\n",
+    "    'r5': \"Ptprb\",\n",
+    "    'r6': \"Pdgfra\",\n",
+    "    'r7': \"Chil3\",\n",
+    "    \"r8\": \"Apln\",\n",
+    "    \"r9\": \"Fibin\",\n",
+    "    \"r10\": \"Pon1\",\n",
+    "    \"r11\": \"Cyp2s1\",\n",
+    "    \"r12\": \"C3ar1\",\n",
+    "    \"r13\": \"Hhip\","
+   ]
   },
   {
    "cell_type": "code",
